# zcash-namada-airdrop

./: .gitignore  .gitmodules  .yamllint.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  deny.toml  flake.nix  rust-toolchain.toml  rustfmt.toml  typos.toml
.cargo/: audit.toml
.github/actions/setup-patched-deps/: action.yml
.github/actions/setup-protoc/: action.yml
.github/actions/setup-rust-build/: action.yml
.github/workflows/: ci.yml  docs.yml
crates/airdrop/: CHANGELOG.md  Cargo.toml
crates/airdrop/src/: airdrop_configuration.rs  chain_nullifiers.rs  cli.rs  commands.rs  lib.rs  main.rs  proof.rs  proof_inputs.rs  unspent_notes_proofs.rs
crates/airdrop/src/commands/: airdrop_claim.rs  airdrop_configuration.rs  generate_claim_proof.rs  note_metadata.rs  pool_processor.rs
crates/airdrop/tests/: build_configuration.rs
crates/claim-circuit/: Cargo.toml
crates/claim-circuit/src/: builder.rs  circuit.rs  convenience.rs  error.rs  lib.rs  proving.rs  verifier.rs
crates/light-wallet-api/: CHANGELOG.md  Cargo.toml  build.rs
crates/light-wallet-api/src/: lib.rs
crates/mnemonic-to-fvks/: CHANGELOG.md  Cargo.toml
crates/mnemonic-to-fvks/src/: cli.rs  lib.rs  main.rs
crates/non-membership-proofs/: CHANGELOG.md  Cargo.toml
crates/non-membership-proofs/src/: chain_nullifiers.rs  lib.rs  light_walletd.rs  non_membership_tree.rs  nullifier.rs  print_utils.rs  scanner.rs  source.rs  user_nullifiers.rs  utils.rs  viewing_keys.rs
crates/non-membership-proofs/src/light_walletd/: config.rs  error.rs
crates/non-membership-proofs/src/merkle/: mod.rs  node.rs  tree.rs
crates/non-membership-proofs/src/non_membership_tree/: node.rs  tree.rs
crates/non-membership-proofs/src/scanner/: error.rs  visitor.rs
crates/non-membership-proofs/src/source/: file.rs  light_walletd.rs
crates/non-membership-proofs/src/source/light_walletd/: config.rs  error.rs  utils.rs
crates/non-membership-proofs/src/source/light_walletd/utils/: retry.rs  sapling_positions.rs
crates/non-membership-proofs/src/user_nullifiers/: decrypt_notes.rs
crates/orchard-airdrop-circuit/: Cargo.toml
crates/orchard-airdrop-circuit/src/: circuit.rs  lib.rs  proof.rs  public_inputs.rs  witness.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
crates/zair-cli/: Cargo.toml
crates/zair-cli/src/: cli.rs  main.rs
crates/zair-cli/src/cli/: claim.rs  config.rs  constants.rs  key.rs  mod.rs  setup.rs  verify.rs
crates/zair-cli/tests/: build_configuration.rs  pipeline.rs  pipeline_soundness.rs
crates/zair-cli/tests/support/: pipeline_harness.rs
crates/zair-cli/tests/test_utils/: mod.rs  pipeline_harness.rs
crates/zair-core/: Cargo.toml
crates/zair-core/src/: lib.rs
crates/zair-core/src/base/: mod.rs  nullifier.rs  utils.rs  value_commitment.rs
crates/zair-core/src/schema/: config.rs  mod.rs  proof_inputs.rs  submission.rs
crates/zair-nonmembership/: Cargo.toml
crates/zair-nonmembership/src/: core.rs  lib.rs
crates/zair-nonmembership/src/gap_tree/: dense.rs  mod.rs  orchard.rs  sapling.rs
crates/zair-nonmembership/src/non_membership_tree/: node.rs  tree.rs
crates/zair-nonmembership/src/pool/: mod.rs  orchard.rs  sapling.rs
crates/zair-nonmembership/src/sparse/: mod.rs  orchard.rs  sapling.rs
crates/zair-nonmembership/tests/: dense_sparse_consistency.rs
crates/zair-orchard-circuit/: Cargo.toml
crates/zair-orchard-circuit/src/: lib.rs
crates/zair-orchard-circuit/src/circuit/: airdrop.rs  gadget.rs  mod.rs
crates/zair-orchard-proofs/: Cargo.toml
crates/zair-orchard-proofs/src/: error.rs  instance.rs  keys.rs  lib.rs  tests.rs  types.rs
crates/zair-orchard-proofs/src/prover/: mod.rs
crates/zair-orchard-proofs/src/verifier/: mod.rs
crates/zair-sapling-circuit/: Cargo.toml
crates/zair-sapling-circuit/src/: circuit.rs  gadgets.rs  lib.rs
crates/zair-sapling-proofs/: Cargo.toml
crates/zair-sapling-proofs/src/: builder.rs  convenience.rs  error.rs  lib.rs  types.rs  verifier.rs
crates/zair-sapling-proofs/src/prover/: builder.rs  convenience.rs  mod.rs  proving.rs
crates/zair-sapling-proofs/src/verifier/: mod.rs
crates/zair-scan/: Cargo.toml
crates/zair-scan/src/: lib.rs  light_walletd.rs  user_nullifiers.rs
crates/zair-scan/src/light_walletd/: retry.rs
crates/zair-scan/src/scanner/: block_scanner.rs  trees.rs
crates/zair-scan/src/scanner/visitor/: account_notes.rs  chain_nullifiers.rs
crates/zair-sdk/: Cargo.toml
crates/zair-sdk/src/: commands.rs  common.rs  lib.rs  network_params.rs  seed.rs
crates/zair-sdk/src/commands/: airdrop_claim.rs  airdrop_configuration.rs  claim_proofs.rs  claim_proofs_prove.rs  claim_submission_sign.rs  claim_submission_verify.rs  key.rs  note_metadata.rs  nullifier_uniqueness.rs  orchard_params.rs  orchard_setup.rs  pool_processor.rs  sensitive_output.rs  signature_digest.rs  submission_messages.rs  workflows.rs
crates/zair-sdk/src/commands/submission_auth/: mod.rs  orchard.rs  sapling.rs
crates/zcash-notes-proof/src/: find_user_notes_minimal.rs  lib.rs  main.rs
docs/: USAGE.md  airdrop_nullifiers.md  book.toml
docs/src/: SUMMARY.md  introduction.md  security.md
docs/src/airdrop-proofs/: index.md  orchard.md  sapling.md
docs/src/appendix/: references.md
docs/src/cli/: claim.md  config.md  index.md  key.md  setup.md  verify.md
docs/src/concepts/: airdrop-nullifier.md  non-membership.md  overview.md  roles-keys.md  snapshots.md  value-commitments.md
docs/src/getting-started/: index.md
docs/src/integration/: index.md  namada.md
nix/: airdrop-halo2-gadgets-sha256.patch  airdrop-orchard-nullifier.patch  airdrop-sapling-nullifier.patch  devshell.nix  formatting.nix  git-hooks.nix  lib.nix
nix/pkgs/: default.nix
