[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
light-wallet-api = { path = "crates/light-wallet-api" }
mnemonic-to-fvks = { path = "crates/mnemonic-to-fvks" }
non-membership-proofs = { path = "crates/non-membership-proofs" }

async-stream = "0.3.6"
bip39 = "2.2.0"
bytemuck = "1.24.0"
clap = "4.5.51"
clap_derive = "4.5.49"
config = { version = "0.15.19", default-features = false }
console-subscriber = "0.5.0"
dotenvy = "0.15.7"
eyre = "0.6.12"
futures = "0.3.31"
futures-core = "0.3.31"
hex = "0.4"
orchard = "0.11.0"
prost = "0.14.1"
rpassword = "7.4.0"
rs_merkle = "1.5.0"
rustls = "0.23.35"
sapling = { package = "sapling-crypto", version = "0.5" }
secrecy = "0.10.3"
serde = "1"
serde_json = "1"
serde_with = "3.16.1"
sha2 = "0.10"
sled = "0.34.7"
thiserror = "2.0.17"
tokio = "1.48.0"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
zcash_keys = "0.12.0"
zcash_note_encryption = "0.4"
zcash_primitives = "0.26.1"
zcash_protocol = "0.7.1"
zip32 = "0.2.1"

[workspace.lints.clippy]
absolute_paths = "allow"
allow_attributes = "allow"
arbitrary_source_item_ordering.level = "allow"
non_ascii_literal = "allow"
blanket_clippy_restriction_lints = "allow"
cargo = { priority = -1, level = "deny" }
cargo_common_metadata = "allow"
complexity = { priority = -2, level = "deny" }
correctness = { priority = -4, level = "deny" }
dbg_macro = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
future_not_send = "allow"
implicit_return = "allow"
integer_division_remainder_used = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_trait_methods = "allow"
mod_module_files = "allow"
multiple_crate_versions = "allow"
negative_feature_names = "allow"
nursery = { priority = -9, level = "deny" }
option_if_let_else = "allow"
pattern_type_mismatch = "allow"
pedantic = { priority = -8, level = "deny" }
perf = { priority = -3, level = "deny" }
pub_use = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
redundant_pub_crate = "allow"
ref_patterns = "allow"
restriction = { priority = -5, level = "deny" }
self_named_module_files = "allow"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
style = { priority = -6, level = "deny" }
suspicious = { priority = -7, level = "deny" }
use_debug = "allow"
wildcard_imports = "allow"

[patch.crates-io]
orchard = { path = "./.patched-orchard" }
sapling-crypto = { path = "./.patched-sapling-crypto" }

[workspace.lints.rust]
missing_docs = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "deny", priority = 0 }
unreachable_pub = { level = "warn", priority = -1 }
unused_imports = { level = "warn", priority = -1 }
unused_must_use = { level = "deny", priority = -1 }
