[package]
name = "airdrop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
tokio-console = ["dep:console-subscriber"]
## Enable file-based nullifier input (for development/testing)
file-source = []

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
console-subscriber = { workspace = true, optional = true }
dotenvy = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
non-membership-proofs = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
schemars = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["hex"] }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "io-util",
  "tracing",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
zcash_keys = { workspace = true, features = ["orchard", "sapling"] }
zcash_protocol = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
test-utils = { workspace = true }

[lints]
workspace = true
