[package]
name = "airdrop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "airdrop"
path = "src/lib.rs"

[[bin]]
name = "airdrop"
path = "src/main.rs"

[features]
default = []
tokio-console = ["dep:console-subscriber"]

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
console-subscriber = { workspace = true, optional = true }
dotenvy = { workspace = true }
eyre = { workspace = true }
http = { workspace = true }
non-membership-proofs = { workspace = true }
orchard = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
sapling = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["hex"] }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "io-util",
  "tracing",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
zcash_keys = { workspace = true, features = ["orchard", "sapling"] }
zcash_protocol = { workspace = true }
zip32 = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
dirs = { workspace = true }
base64 = "0.22.1"
hex = { workspace = true }
ureq = { workspace = true, features = ["json"] }
sapling = { workspace = true }
tempfile = { workspace = true }
test-utils = { workspace = true }

[lints]
workspace = true
