[package]
name = "claim-circuit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "ZK claim circuit for Zcash-Namada airdrop"

[dependencies]
bellman = { workspace = true }
bls12_381 = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
incrementalmerkletree = { workspace = true }
jubjub = { workspace = true }
non-membership-proofs = { workspace = true }
rand = "0.8"
sapling = { workspace = true, features = ["circuit"] }
thiserror = { workspace = true }

[dev-dependencies]
rand_core = "0.6"
rand_xorshift = "0.3"
tempfile = { workspace = true }

[lints]
workspace = true
