[package]
name = "light-wallet-api"
version = "0.1.0"
edition.workspace = true
license = "MIT"

[dependencies]
prost = { workspace = true }
tonic = { workspace = true, features = ["tls-webpki-roots"] }
tonic-prost = { workspace = true }

[lints]
workspace = true

[build-dependencies]
tonic-prost-build = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost"]
