[package]
name = "mnemonic-to-fvks"
version = "0.1.0"
edition.workspace = true

[dependencies]
bip39 = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
rpassword = { workspace = true }
secrecy = { workspace = true }
zcash_keys = { workspace = true, features = ["orchard", "sapling"] }
zcash_protocol = { workspace = true }
zip32 = { workspace = true }

[lints]
workspace = true
