[package]
name = "non-membership-proofs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-stream = { workspace = true }
bytemuck = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
orchard = { workspace = true }
rayon = "1"
rs_merkle = { workspace = true }
sapling = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
] }
tonic = { workspace = true, features = ["tls-native-roots"] }
tracing = { workspace = true }
zcash_client_backend = { workspace = true, features = [
  "lightwalletd-tonic-tls-webpki-roots",
] }
zcash_note_encryption = { workspace = true }
zcash_primitives = { workspace = true }
zcash_protocol = { workspace = true }
zip32 = "0.2"

[lints]
workspace = true

[build-dependencies]
tonic-prost-build = "0.14.2"
