[package]
name = "non-membership-proofs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-stream = { workspace = true }
blake2s_simd = { workspace = true }
bridgetree = { workspace = true }
bytemuck = { workspace = true }
futures = { workspace = true, features = ["compat"] }
http = { workspace = true }
incrementalmerkletree = { workspace = true }
orchard = { workspace = true }
sapling = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
] }
tonic = { workspace = true, features = ["tls-native-roots"] }
tracing = { workspace = true }
zcash_client_backend = { workspace = true, features = [
  "lightwalletd-tonic-tls-webpki-roots",
  "orchard",
] }
zcash_note_encryption = { workspace = true }
zcash_primitives = { workspace = true }
zcash_protocol = { workspace = true }
zip32 = "0.2"

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true }
test-utils = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }

[lints]
workspace = true

[build-dependencies]
tonic-prost-build = "0.14.2"
