[package]
name = "zair-scan"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Chain scanning and lightwalletd integration for ZAIR"

[dependencies]
blake2s_simd = { workspace = true }
bytemuck = { workspace = true }
ff = { workspace = true }
futures = { workspace = true, features = ["compat"] }
group = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
incrementalmerkletree = { workspace = true }
orchard = { workspace = true }
sapling = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
shardtree = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
  "sync",
  "time",
] }
tonic = { workspace = true, features = ["tls-native-roots"] }
tracing = { workspace = true }
zair-core = { workspace = true }
zcash_client_backend = { workspace = true, features = [
  "lightwalletd-tonic-tls-webpki-roots",
  "orchard",
] }
zcash_keys = { workspace = true }
zcash_primitives = { workspace = true }
zcash_protocol = { workspace = true }
zip32 = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
test-utils = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }

[lints]
workspace = true
