[package]
name = "zair-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SDK/library workflow logic for ZAIR"

[features]
default = ["prove"]
# Enables Sapling proving/keygen helpers (verification stays available without this).
prove = ["zair-sapling-proofs/prove"]

[dependencies]
eyre = { workspace = true }
http = { workspace = true }
orchard = { workspace = true }
sapling = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
  "sync",
] }
tracing = { workspace = true }
zcash_keys = { workspace = true, features = ["orchard", "sapling"] }
zcash_protocol = { workspace = true }
zip32 = { workspace = true }

zair-core = { workspace = true }
zair-nonmembership = { workspace = true }
zair-sapling-proofs = { workspace = true }
zair-scan = { workspace = true }

bellman = { workspace = true }
bls12_381 = { workspace = true }
group = { workspace = true }
hex = { workspace = true, features = ["serde"] }
secrecy = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[lints]
workspace = true
